Generalized Field Manager

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         <!-- Custom Scripts -->
         <script src="main.js"></script>
         <script src="fieldValidation.js"></script>
+        <script src="createField.js"></script>
         <script src="phone.js"></script>
         <script src="name.js"></script>
             
