--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
                     </div>
 
                     <label id="client-email-label" class="input-label" for="email1">Email *</label>
-                    <!-- <input type="email" id="email" name="email" placeholder="email@example.com *" required>
-                    <span id="email-error" class="error-label">Please enter a valid email address.</span> -->
                     <label id="client-phone-label" class="input-label" for="phone1">Phone *</label>
                 </div>
                 <div class="form-footer">
@@ -146,7 +144,7 @@
         <script src="main.js"></script>
         <script src="fieldValidation.js"></script>
         <script src="createField.js"></script>
-        <script src="phone.js"></script>
+        <script src="formFields.js"></script>
         <script src="name.js"></script>
         <script src="contact.js"></script>
             
@@ -155,7 +153,7 @@
             addName("client-name-label", 'afterend', 0, true);
             addPhone("client-phone-label", 'afterend', 0, true);
             addEmail("client-email-label", 'afterend', 0, true);
-            addContact("emergency-label", 'beforeend', 0, true);
+            addContact("emergency-label", 'beforeend', 10, true);
         </script>
 
         <!-- Handles stage switching, ensuring valid fields -->
