Started added comments

--- a/src/index.html
+++ b/src/index.html
@@ -145,5 +145,9 @@
         <script src="main.js"></script>
         <script src="formFields.js"></script>
 
+        <script type="text/javascript">
+            initializeForm();
+        </script>
+
     </body>
     </html>
